// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ClusterType should render as AKS 1`] = `
<body>
  <div>
    <span
      class="text-neutral inline-flex items-center shrink-0 text-xs px-1.5 h-6 border-neutral border rounded-md bg-surface-neutral-subtle"
      data-accent-color="neutral"
    >
      Self-managed
    </span>
  </div>
</body>
`;

exports[`ClusterType should render as EKS 1`] = `
<body>
  <div>
    <span
      class="text-neutral inline-flex items-center shrink-0 text-xs px-1.5 h-6 border-neutral border rounded-md bg-surface-neutral-subtle"
      data-accent-color="neutral"
    >
      EKS (Karpenter)
    </span>
  </div>
</body>
`;

exports[`ClusterType should render as GCP 1`] = `
<body>
  <div>
    <span
      class="text-neutral inline-flex items-center shrink-0 text-xs px-1.5 h-6 border-neutral border rounded-md bg-surface-neutral-subtle"
      data-accent-color="neutral"
    >
      GKE (Autopilot)
    </span>
  </div>
</body>
`;

exports[`ClusterType should render as SCW 1`] = `
<body>
  <div>
    <span
      class="text-neutral inline-flex items-center shrink-0 text-xs px-1.5 h-6 border-neutral border rounded-md bg-surface-neutral-subtle"
      data-accent-color="neutral"
    >
      Kapsule
    </span>
  </div>
</body>
`;
